@@ -30,7 +30,7 @@
 #include "wx/osx/private.h"
 
 #if wxOSX_USE_COCOA_OR_CARBON
-    #include <QuickTime/QuickTime.h>
+//    #include <QuickTime/QuickTime.h>
 #endif
 
 // ----------------------------------------------------------------------------
